--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-countup": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
