--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-countup": "^4.2.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "throttle-debounce": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
