--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-countup": "^4.2.1",
     "react-dom": "^16.8.6",
+    "react-instagram-embed": "^1.5.0",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.2",
     "throttle-debounce": "^2.1.0"
